--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -8,6 +8,8 @@ RUN apt install -y python3-pip
 RUN pip3 install psycopg2-binary
 RUN pip3 install pika
 
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /opt/gdal
 COPY main.py main.py
 
